src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Allow_download_copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, Allow downloading questionnaire copy</description>
        <label>Allow Download Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Binding_Object__c</fullName>
        <description>Set information for binding object</description>
        <label>Binding Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Set questionnaire category type</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FB_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Questionnaire information</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, questionnaire copy sent or not by mail.</description>
        <label>Send Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Set version information</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check whether template has been published or not</description>
        <inlineHelpText>Check whether template has been published or not</inlineHelpText>
        <label>is Published</label>
        <type>Checkbox</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Category__c</columns>
        <columns>Binding_Object__c</columns>
        <columns>Community_URL__c</columns>
        <columns>Description__c</columns>
        <columns>Publish__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>